--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.10.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
+    "react-text-loop": "^2.3.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
