--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
+    "react-tabs": "^6.0.2",
     "react-text-loop": "^2.3.0",
     "sort-by": "^1.2.0",
     "swiper": "^10.2.0"
