--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.0",
     "react-icons": "^4.10.1",
     "react-parallax": "^3.5.1",
     "react-rating": "^2.0.5",
@@ -24,7 +26,8 @@
     "react-tabs": "^6.0.2",
     "react-text-loop": "^2.3.0",
     "sort-by": "^1.2.0",
-    "swiper": "^10.2.0"
+    "swiper": "^10.2.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
