--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-rating": "^2.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
+    "react-simple-captcha": "^9.3.0",
     "react-tabs": "^6.0.2",
     "react-text-loop": "^2.3.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.27",
     "swiper": "^10.2.0",
     "yup": "^1.2.0"
   },
