--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@hookform/resolvers": "^3.3.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^4.35.0",
+    "aos": "^2.3.4",
     "firebase": "^10.3.1",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "radium": "^0.26.2",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.7",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.0",
     "react-icons": "^4.10.1",
