--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^4.35.0",
     "aos": "^2.3.4",
+    "axios": "^1.5.1",
     "firebase": "^10.3.1",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
