--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^4.35.0",
     "aos": "^2.3.4",
